routesコード追加、controllerコード追加(users,tweets)、viewsコード追加(application,tweets,users)

--- a/app/views/tweets/new.html.erb
+++ b/app/views/tweets/new.html.erb
@@ -1,2 +1,10 @@
 <h1>Tweets#new</h1>
 <p>Find me in app/views/tweets/new.html.erb</p>
+
+<%= form_for @tweet do |f| %> <%# form_forとは、投稿フォームに投稿された内容を保存するテーブルが存在するときに使用される。 %>
+    <p>
+        <%= f.label :body,"ツイート" %> <%# ラベルとテキスト入力フィールドを組み合わせた形式で表示される。 表示例 ➡ ツイート: [テキスト入力フィールド] %>
+        <%= f.text_field :body %> <%# テキスト入力フィールドにテキストを入力することができる。その入力された値は、フォームが送信されたときに、関連するオブジェクトの属性に反映されることになる。 %>
+    </p>
+    <%= f.submit %> <%# フォームの送信ボタンを生成。 %>
+<% end %>
