--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,19 @@
   </head>
 
   <body>
+  <% if user_signed_in? %> <%# deviseのメソッドで、「ログインしているかしていないかでtrue or falseを返す」メソッド %>
+  <%# ログインしている場合の表示 %>
+    <%= link_to "新規投稿", new_tweet_path %>
+    <%= link_to "ログアウト", destroy_user_session_path, data: { turbo_method: :delete, turbo_confirm: "ログインしますか？" } %>
+    <%= link_to "マイページ", user_path(current_user.id) %> <%# current_user は現在ログインしているユーザーを表すオブジェクトであり、.id を使ってユーザーのIDを取得します。 %>
+  <% else %>
+  <%# ログインしていない場合に表示 %>
+    <%= link_to "新規登録", new_user_registration_path %>
+    <%= link_to "ログイン", new_user_session_path %>
+  <% end %>
+  <%# ログイン関係無く表示 %>
+    <%= link_to "ツイート一覧", tweets_path %>
+    <%= link_to "ユーザー一覧", users_path %>
     <%= yield %>
   </body>
 </html>
