--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,4 +1,13 @@
 <h1>Tweets#show</h1>
 <p>Find me in app/views/tweets/show.html.erb</p>
 
+<%# ツイート詳細ページ %>
+
 <p><span>ツイート内容： </span><%= @tweet.boby %></p>
+
+<%# 
+
+@tweet.bobyとは
+ツイートの内容を表示する
+
+%>
